# reclang

./: .gitignore  README.md  reclang.cabal
src/: Interp.hs  MyLexer.hs  MyParser.hs  Types.hs
test/: TestData.hs  TestInterp.hs  TestLexer.hs  TestMain.hs  TestParser.hs
